--- a/blockwar/Projectfiles-iOS/Resources/Info.plist
+++ b/blockwar/Projectfiles-iOS/Resources/Info.plist
@@ -46,6 +46,8 @@
 	</dict>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackTranslucent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
