--- a/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
@@ -4,31 +4,31 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>marine0.png</key>
+            <key>zombie0-hd.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{0,0},{13,15}}</string>
+                <string>{{0,0},{22,30}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{13,15}}</string>
+                <string>{{0,0},{22,30}}</string>
                 <key>sourceSize</key>
-                <string>{13,15}</string>
+                <string>{22,30}</string>
             </dict>
-            <key>marine1.png</key>
+            <key>zombie1-hd.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{0,15},{13,15}}</string>
+                <string>{{0,30},{22,30}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{13,15}}</string>
+                <string>{{0,0},{22,30}}</string>
                 <key>sourceSize</key>
-                <string>{13,15}</string>
+                <string>{22,30}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -36,13 +36,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>marineframes.png</string>
+            <string>zombieframes-hd.png</string>
             <key>size</key>
-            <string>{16,32}</string>
+            <string>{32,64}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e9e54caf51d1ff404ef5ff683116d1b1:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:a5fb3fb8645941564631715eb6bacab3:1/1$</string>
             <key>textureFileName</key>
-            <string>marineframes.png</string>
+            <string>zombieframes-hd.png</string>
         </dict>
     </dict>
 </plist>
