--- a/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/zombieframes-hd.plist
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>frames</key>
-        <dict>
-            <key>zombie0-hd.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{0,0},{22,30}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{22,30}}</string>
-                <key>sourceSize</key>
-                <string>{22,30}</string>
-            </dict>
-            <key>zombie1-hd.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{0,30},{22,30}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{22,30}}</string>
-                <key>sourceSize</key>
-                <string>{22,30}</string>
-            </dict>
-        </dict>
-        <key>metadata</key>
-        <dict>
-            <key>format</key>
-            <integer>2</integer>
-            <key>realTextureFileName</key>
-            <string>zombieframes-hd.png</string>
-            <key>size</key>
-            <string>{32,64}</string>
-            <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:a5fb3fb8645941564631715eb6bacab3:1/1$</string>
-            <key>textureFileName</key>
-            <string>zombieframes-hd.png</string>
-        </dict>
-    </dict>
+<dict>
+	<key>frames</key>
+	<dict>
+		<key>zombie0.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{0,0},{22,30}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{22,30}}</string>
+			<key>sourceSize</key>
+			<string>{22,30}</string>
+		</dict>
+		<key>zombie1.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{0,30},{22,30}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{22,30}}</string>
+			<key>sourceSize</key>
+			<string>{22,30}</string>
+		</dict>
+	</dict>
+	<key>metadata</key>
+	<dict>
+		<key>format</key>
+		<integer>2</integer>
+		<key>realTextureFileName</key>
+		<string>zombieframes-hd.png</string>
+		<key>size</key>
+		<string>{32,64}</string>
+		<key>smartupdate</key>
+		<string>$TexturePacker:SmartUpdate:a5fb3fb8645941564631715eb6bacab3:1/1$</string>
+		<key>textureFileName</key>
+		<string>zombieframes-hd.png</string>
+	</dict>
+</dict>
 </plist>
