scaled hd versions slightly

--- a/blockwar/Projectfiles/Resources/Sprites/marineframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/marineframes-hd.plist
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>frames</key>
-	<dict>
-		<key>marine0.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{0,0},{26,30}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{26,30}}</string>
-			<key>sourceSize</key>
-			<string>{26,30}</string>
-		</dict>
-		<key>marine1.png</key>
-		<dict>
-			<key>frame</key>
-			<string>{{0,30},{26,30}}</string>
-			<key>offset</key>
-			<string>{0,0}</string>
-			<key>rotated</key>
-			<false/>
-			<key>sourceColorRect</key>
-			<string>{{0,0},{26,30}}</string>
-			<key>sourceSize</key>
-			<string>{26,30}</string>
-		</dict>
-	</dict>
-	<key>metadata</key>
-	<dict>
-		<key>format</key>
-		<integer>2</integer>
-		<key>realTextureFileName</key>
-		<string>marineframes-hd.png</string>
-		<key>size</key>
-		<string>{32,64}</string>
-		<key>smartupdate</key>
-		<string>$TexturePacker:SmartUpdate:fcce06dcc8460c4bf457783d460c1558:1/1$</string>
-		<key>textureFileName</key>
-		<string>marineframes-hd.png</string>
-	</dict>
-</dict>
+    <dict>
+        <key>frames</key>
+        <dict>
+            <key>marine0.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{0,0},{36,41}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{36,41}}</string>
+                <key>sourceSize</key>
+                <string>{36,41}</string>
+            </dict>
+            <key>marine1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{0,41},{36,41}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{36,41}}</string>
+                <key>sourceSize</key>
+                <string>{36,41}</string>
+            </dict>
+        </dict>
+        <key>metadata</key>
+        <dict>
+            <key>format</key>
+            <integer>2</integer>
+            <key>realTextureFileName</key>
+            <string>marineframes-hd.png</string>
+            <key>size</key>
+            <string>{64,128}</string>
+            <key>smartupdate</key>
+            <string>$TexturePacker:SmartUpdate:e69d9283ef7c23409980bda57972c658:1/1$</string>
+            <key>textureFileName</key>
+            <string>marineframes-hd.png</string>
+        </dict>
+    </dict>
 </plist>
