--- a/blockwar/Projectfiles/Resources/Sprites/backup/zombieframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/backup/zombieframes-hd.plist
@@ -7,7 +7,7 @@
             <key>zombie0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{30,41}}</string>
+                <string>{{0,0},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>zombie1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{34,2},{30,41}}</string>
+                <string>{{30,0},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +33,7 @@
             <key>zombieWhite0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{66,2},{30,41}}</string>
+                <string>{{0,41},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +46,7 @@
             <key>zombieWhite1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,45},{30,41}}</string>
+                <string>{{30,41},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -64,9 +64,9 @@
             <key>realTextureFileName</key>
             <string>zombieframes-hd.png</string>
             <key>size</key>
-            <string>{128,128}</string>
+            <string>{64,128}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:5b1980f2d0747585e614c185132308ac:c3b914e072b20ca3b6d944d03d8fc9d6:2ad5c83d254b1bbed18673292b04d94b$</string>
+            <string>$TexturePacker:SmartUpdate:fb0d1ff897ded82277f846b47cace41d:1/1$</string>
             <key>textureFileName</key>
             <string>zombieframes-hd.png</string>
         </dict>
