--- a/blockwar/Projectfiles/Resources/Sprites/backup/zombieframes-hd copy.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/backup/zombieframes-hd copy.plist
@@ -7,54 +7,54 @@
             <key>zombie0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{42,49}}</string>
+                <string>{{2,2},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,49}}</string>
+                <string>{{0,0},{30,41}}</string>
                 <key>sourceSize</key>
-                <string>{42,49}</string>
+                <string>{30,41}</string>
             </dict>
             <key>zombie1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{46,2},{42,49}}</string>
+                <string>{{34,2},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,49}}</string>
+                <string>{{0,0},{30,41}}</string>
                 <key>sourceSize</key>
-                <string>{42,49}</string>
+                <string>{30,41}</string>
             </dict>
-            <key>zombie_white0.png</key>
+            <key>zombieWhite0.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,53},{42,49}}</string>
+                <string>{{66,2},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,49}}</string>
+                <string>{{0,0},{30,41}}</string>
                 <key>sourceSize</key>
-                <string>{42,49}</string>
+                <string>{30,41}</string>
             </dict>
-            <key>zombie_white1.png</key>
+            <key>zombieWhite1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{46,53},{42,49}}</string>
+                <string>{{2,45},{30,41}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,49}}</string>
+                <string>{{0,0},{30,41}}</string>
                 <key>sourceSize</key>
-                <string>{42,49}</string>
+                <string>{30,41}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -66,7 +66,7 @@
             <key>size</key>
             <string>{128,128}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:648f0f996639c6cf2bbe2fd6f87104e5:9f7bcc97be38f321139880f3ad8fa6b5:2ad5c83d254b1bbed18673292b04d94b$</string>
+            <string>$TexturePacker:SmartUpdate:5b1980f2d0747585e614c185132308ac:c3b914e072b20ca3b6d944d03d8fc9d6:2ad5c83d254b1bbed18673292b04d94b$</string>
             <key>textureFileName</key>
             <string>zombieframes-hd.png</string>
         </dict>
