--- a/blockwar/Projectfiles/Resources/Sprites/superzombieframes-hd.plist
+++ b/blockwar/Projectfiles/Resources/Sprites/superzombieframes-hd.plist
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>frames</key>
-        <dict>
-            <key>superzombie0.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,2},{52,59}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{52,59}}</string>
-                <key>sourceSize</key>
-                <string>{52,59}</string>
-            </dict>
-            <key>superzombie1.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{56,2},{52,59}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{52,59}}</string>
-                <key>sourceSize</key>
-                <string>{52,59}</string>
-            </dict>
-            <key>superzombie_white0.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,63},{52,59}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{52,59}}</string>
-                <key>sourceSize</key>
-                <string>{52,59}</string>
-            </dict>
-            <key>superzombie_white1.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{56,63},{52,59}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{52,59}}</string>
-                <key>sourceSize</key>
-                <string>{52,59}</string>
-            </dict>
-        </dict>
-        <key>metadata</key>
-        <dict>
-            <key>format</key>
-            <integer>2</integer>
-            <key>realTextureFileName</key>
-            <string>superzombieframes-hd.png</string>
-            <key>size</key>
-            <string>{128,128}</string>
-            <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:581c565a70ec88857e17fc8fbe17d9bc:4c512375b5e45f7d194fb7d975651cb1:8d8248a9dc9804a54945c6ba22d28b30$</string>
-            <key>textureFileName</key>
-            <string>superzombieframes-hd.png</string>
-        </dict>
-    </dict>
+<dict>
+	<key>frames</key>
+	<dict>
+		<key>superzombie0.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{2,2},{52,59}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{52,59}}</string>
+			<key>sourceSize</key>
+			<string>{52,59}</string>
+		</dict>
+		<key>superzombie1.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{56,2},{52,59}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{52,59}}</string>
+			<key>sourceSize</key>
+			<string>{52,59}</string>
+		</dict>
+		<key>superzombie_white0.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{2,63},{52,59}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{52,59}}</string>
+			<key>sourceSize</key>
+			<string>{52,59}</string>
+		</dict>
+		<key>superzombie_white1.png</key>
+		<dict>
+			<key>frame</key>
+			<string>{{56,63},{52,59}}</string>
+			<key>offset</key>
+			<string>{0,0}</string>
+			<key>rotated</key>
+			<false/>
+			<key>sourceColorRect</key>
+			<string>{{0,0},{52,59}}</string>
+			<key>sourceSize</key>
+			<string>{52,59}</string>
+		</dict>
+	</dict>
+	<key>metadata</key>
+	<dict>
+		<key>format</key>
+		<integer>2</integer>
+		<key>realTextureFileName</key>
+		<string>superzombieframes-hd.png</string>
+		<key>size</key>
+		<string>{128,128}</string>
+		<key>smartupdate</key>
+		<string>$TexturePacker:SmartUpdate:581c565a70ec88857e17fc8fbe17d9bc:4c512375b5e45f7d194fb7d975651cb1:8d8248a9dc9804a54945c6ba22d28b30$</string>
+		<key>textureFileName</key>
+		<string>superzombieframes-hd.png</string>
+	</dict>
+</dict>
 </plist>
