--- a/blockwar/Projectfiles/Worlds/World1/Levels/World1_Level2.plist
+++ b/blockwar/Projectfiles/Worlds/World1/Levels/World1_Level2.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>enemyHP</key>
+	<string>20</string>
 	<key>bossExists</key>
 	<false/>
 	<key>AIName</key>
