--- a/blockwar/Projectfiles/AI/1_3AI.plist
+++ b/blockwar/Projectfiles/AI/1_3AI.plist
@@ -1,25 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>waveSize</key>
-	<integer>4</integer>
-	<key>rowSize</key>
-	<integer>4</integer>
-	<key>maxConsecutiveWaves</key>
-	<integer>6</integer>
-	<key>probabilityWaveDelay</key>
-	<real>0.2</real>
-	<key>waveDelay</key>
-	<real>0.15</real>
-	<key>color</key>
-	<array>
-		<string>0.3</string>
-		<string>0.5</string>
-		<string>0.9</string>
-		<real>1</real>
-	</array>
-	<key>waveTimer</key>
-	<integer>2</integer>
-</dict>
+<array>
+	<dict>
+		<key>UnitType</key>
+		<integer>1</integer>
+		<key>waveTimer</key>
+		<integer>2</integer>
+		<key>waveDelay</key>
+		<real>0.35</real>
+		<key>probabilityWaveDelay</key>
+		<real>0.2</real>
+		<key>maxConsecutiveWaves</key>
+		<integer>3</integer>
+		<key>rowSize</key>
+		<integer>2</integer>
+		<key>waveSize</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>UnitType</key>
+		<integer>0</integer>
+		<key>waveTimer</key>
+		<integer>1</integer>
+		<key>waveDelay</key>
+		<real>0.15</real>
+		<key>probabilityWaveDelay</key>
+		<real>0.2</real>
+		<key>maxConsecutiveWaves</key>
+		<integer>6</integer>
+		<key>rowSize</key>
+		<integer>4</integer>
+		<key>waveSize</key>
+		<integer>4</integer>
+	</dict>
+</array>
 </plist>
