--- a/blockwar/Projectfiles/AI/1_4AI.plist
+++ b/blockwar/Projectfiles/AI/1_4AI.plist
@@ -4,7 +4,7 @@
 <array>
 	<dict>
 		<key>UnitType</key>
-		<integer>1</integer>
+		<integer>3</integer>
 		<key>waveTimer</key>
 		<integer>2</integer>
 		<key>waveDelay</key>
@@ -20,19 +20,35 @@
 	</dict>
 	<dict>
 		<key>UnitType</key>
-		<integer>0</integer>
+		<integer>3</integer>
 		<key>waveTimer</key>
-		<integer>1</integer>
+		<integer>20</integer>
 		<key>waveDelay</key>
-		<real>0.15</real>
+		<integer>3</integer>
+		<key>probabilityWaveDelay</key>
+		<real>0.3</real>
+		<key>maxConsecutiveWaves</key>
+		<integer>4</integer>
+		<key>rowSize</key>
+		<integer>2</integer>
+		<key>waveSize</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>UnitType</key>
+		<integer>1</integer>
+		<key>waveTimer</key>
+		<integer>2</integer>
+		<key>waveDelay</key>
+		<real>0.35</real>
 		<key>probabilityWaveDelay</key>
 		<real>0.2</real>
 		<key>maxConsecutiveWaves</key>
-		<integer>6</integer>
+		<integer>3</integer>
 		<key>rowSize</key>
-		<integer>4</integer>
+		<integer>2</integer>
 		<key>waveSize</key>
-		<integer>4</integer>
+		<integer>2</integer>
 	</dict>
 </array>
 </plist>
